Remove manifest cleaning and made assets installation integrity check