@@ -1,50 +1,57 @@
 package org.tiny.whiterun.services;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import javafx.concurrent.Task;
-import org.json.JSONArray;
-import org.json.JSONObject;
+import org.apache.commons.io.FileUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.tiny.whiterun.models.AssetsPack;
+import org.tiny.whiterun.models.InstalledPack;
+import org.tiny.whiterun.models.PackState;
+import org.tiny.whiterun.models.PacksWrapper;
 
 import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.*;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.Properties;
 
 
 public class GameDirManager {
 
     private static final Logger log = LoggerFactory.getLogger(GameDirManager.class);
     public static final String ASSETS_PACK = "assets-pack";
+    public static final String ASSETS = "assets";
     private static GameDirManager instance;
 
     private final Properties properties;
 
+    private final Path userPrefsFolder;
     private final Path settings;
 
-    private boolean patched;
-
     private File gameRootPath;
+    private final ObjectMapper objectMapper;
 
     private GameDirManager() {
         properties = new Properties();
+        objectMapper = new ObjectMapper();
 
         String homeDir = System.getProperty("user.home");
-        Path userPrefs = Path.of(homeDir).resolve(".whiterun");
+        userPrefsFolder = Path.of(homeDir).resolve(".whiterun");
 
         try {
-            if (!Files.exists(userPrefs)) {
-                Files.createDirectories(userPrefs);
+            if (!Files.exists(userPrefsFolder)) {
+                Files.createDirectories(userPrefsFolder);
             }
-            this.settings = userPrefs.resolve("settings");
+            this.settings = userPrefsFolder.resolve("settings");
             if (Files.exists(settings)) {
                 properties.load(new FileInputStream(settings.toFile()));
                 String gameFolder = (String) properties.get("gameFolder");
                 this.gameRootPath = Path.of(gameFolder).toFile();
-                this.patched = Boolean.parseBoolean(properties.getProperty("patched", "false"));
-            } else {
-                this.patched = false;
+
             }
             Optional<String> gameFolder = new InstallationFinder().findGameFolder();
             gameFolder.ifPresent(path -> setGameRootPath(Path.of(path).toFile()));
@@ -68,17 +75,25 @@ public class GameDirManager {
         return "";
     }
 
-    public boolean isPatched() {
-        return patched;
-    }
-
-    public File getAssetPackFolder() throws FileNotFoundException {
+    public File getOrCreateAssetPackFolder() throws IOException {
         if (gameRootPath != null) {
-            Path path = Paths.get(gameRootPath.getPath(), ASSETS_PACK);
+            Path path = getAssetPackFolderPath();
             log.info("Get asset pack at Location {}", path);
+            if (!Files.exists(path)) {
+                Files.createDirectories(path);
+                log.info("Folder 'assets-pack' has bean created in {}", path);
+            }
             return path.toFile();
         }
         throw new FileNotFoundException("Game root path is null");
+    }
+
+    public Path getAssetPackFolderPath() {
+        return Paths.get(gameRootPath.getPath(), ASSETS_PACK);
+    }
+
+    public Path getAssetFolderPath() {
+        return Paths.get(gameRootPath.getPath(), ASSETS);
     }
 
     public void setGameRootPath(File gameRootPath) {
@@ -92,87 +107,72 @@ public class GameDirManager {
         return new Task<>() {
             @Override
             protected Void call() {
-                if (patched) {
-                    return null;
-                }
                 try {
-                    log.info("Clean Manifest file");
-                    updateMessage("Clean Manifest file");
-                    cleanManifest();
+                    log.info("Create assets pack folder");
+                    updateMessage("Create assets pack folder");
+                    getOrCreateAssetPackFolder();
                     Thread.sleep(500);
-                    log.info("Create default assets pack");
-                    updateMessage("Create default assets pack (this might take a while)");
-                    Path assetPath = Paths.get(gameRootPath.getPath(), "assets");
-                    ZipUtils.getInstance().createAssetsPack(assetPath);
-                    patched = true;
-                    properties.setProperty("patched", String.valueOf(true));
-                    storeProperties();
+                    Path assetsBackup = userPrefsFolder.resolve("assets_backup");
+                    log.info("Backup game assets folder");
+                    updateMessage("Backup game assets folder (this might take a while)");
+                    if (Files.exists(assetsBackup)) {
+                        FileUtils.deleteDirectory(assetsBackup.toFile());
+                    }
+                    FileUtils.copyDirectory(getAssetFolderPath().toFile(), assetsBackup.toFile());
                     log.info("patch complete");
                     updateMessage("Finished");
                     Thread.sleep(500);
-
-                    return null;
+                    succeeded();
                 } catch (IOException | InterruptedException e) {
                     log.error("Error while patching the game", e);
-                    throw new RuntimeException(e);
+                    updateMessage("Error while patching the game" + e.getMessage());
+                    failed();
                 }
+                return null;
             }
         };
     }
 
-    private void cleanManifest() throws IOException {
-
-        Path manifestPath = Paths.get(gameRootPath.getPath(), "build-info/manifest.json");
-
-        if (!Files.isRegularFile(manifestPath)) {
-            throw new FileNotFoundException("The file 'manifest.json' was not found in the folder" + gameRootPath + ".");
+    public PackState checkPackInstallation(AssetsPack pack) {
+        PacksWrapper packsWrapper = null;
+        try {
+            packsWrapper = getOrCreatePacks();
+        } catch (IOException e) {
+            throw new RuntimeException(e);
         }
-
-        String manifestContent = new String(Files.readAllBytes(manifestPath));
-        JSONObject manifestData = getJsonObject(manifestContent);
-
-        try (BufferedWriter writer = Files.newBufferedWriter(manifestPath)) {
-            writer.write(manifestData.toString(4));
+        Optional<InstalledPack> first = packsWrapper.packs().stream()
+                .filter(installedPack -> installedPack.name().equals(pack.archivePath().getFileName().toString())).findFirst();
+        if (first.isEmpty()) {
+            return PackState.NOT_INSTALLED;
         }
-
-        log.info("Manifest file has bean patched in {}.", gameRootPath);
+        Map<String, Boolean> stringBooleanMap = ZipUtils.getInstance().checkInstallation(first.get().entries());
+        log.info("some file are moved {}", stringBooleanMap.entrySet().stream().filter(stringBooleanEntry -> !stringBooleanEntry.getValue()).map(Map.Entry::getKey).toList());
+        if (stringBooleanMap.containsValue(false)) {
+            return PackState.COVERED;
+        }
+        return PackState.INSTALLED;
     }
 
-    private static JSONObject getJsonObject(String manifestContent) {
-        JSONObject manifestData = new JSONObject(manifestContent);
-
-        if (!manifestData.has("files")) {
-            throw new IllegalArgumentException("The manifest.json file does not contain a 'files' key.");
+    public void registerInstallation(InstalledPack pack) throws IOException {
+        PacksWrapper packsWrapper = getOrCreatePacks();
+        Optional<InstalledPack> first = packsWrapper.packs().stream()
+                .filter(installedPack -> installedPack.name().equals(pack.name())).findFirst();
+        if (first.isEmpty()) {
+            packsWrapper.packs().add(pack);
+        } else {
+            first.get().entries().replaceAll((s, s2) -> pack.entries().get(s));
         }
-
-        JSONArray files = manifestData.getJSONArray("files");
-        JSONArray filteredFiles = new JSONArray();
-
-        for (int i = 0; i < files.length(); i++) {
-            Object entry = files.get(i);
-            if (entry instanceof String && !((String) entry).contains("assets/")) {
-                filteredFiles.put(entry);
-            }
-        }
-
-        manifestData.put("files", filteredFiles);
-        return manifestData;
+        Path path = userPrefsFolder.resolve("installation.json");
+        objectMapper.writeValue(path.toFile(), packsWrapper);
     }
 
-    public List<String> getInstalledPack() {
-        String property = properties.getProperty("installed", "");
-        return Arrays.asList(property.split(","));
-    }
-
-    public void registerInstallation(String pack) {
-        String property = properties.getProperty("installed", "");
-        List<String> installedPacks = new ArrayList<>(List.of(property.split(",")));
-        if (!installedPacks.contains(pack)) {
-            installedPacks.add(pack);
+    private PacksWrapper getOrCreatePacks() throws IOException {
+        Path path = userPrefsFolder.resolve("installation.json");
+        if (!Files.exists(path)) {
+            Files.createFile(path);
+            objectMapper.writeValue(path.toFile(), new PacksWrapper(List.of()));
         }
-        String joined = String.join(",", installedPacks);
-        properties.put("installed", joined);
-        storeProperties();
+        return objectMapper.readValue(path.toFile(), PacksWrapper.class);
     }
 
     private void storeProperties() {
